--- a/styles/main.css
+++ b/styles/main.css
@@ -209,6 +209,7 @@ a {
     height: 28px;
     background-color: #F37335;
     color: #FFF;
+    font-family: var(--open-sans);
     border-radius: 20px;
     font-size: 14px;
     font-weight: 600;
@@ -216,17 +217,129 @@ a {
 }
 
 .banner-description {
+    max-width: 328px;
     color: #FFF;
     font-size: 15px;
     line-height: 160%;
+    font-weight: 400px;
+    color: rgba(var(--light-rgb), .8);
 }
 
 .banner-btn {
     background-color: var(--accent-light);
+    font-family: var(--nunito-sans);
     width: 170px;
     height: 58px;
     border: 0;
-    border-radius: 10px;
+    border-radius: 5px;
     text-transform: uppercase;
     font-size: 14px;
+    font-weight: 700;
+    color: #1E2F40;
+}
+
+.banner-btn:hover {
+    background-color: var(--accent-dark);
+}
+
+/* Menu */
+
+.menu-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 100px;
+    margin-bottom: 34px;
+}
+
+.menu-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #443737;
+    font-family: var(--nunito-sans);
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 127.273%;
+    text-transform: uppercase;
+}
+
+.menu-header select {
+    border-radius: 22px;
+    border: 1px solid #DEDEDE;
+    background: #FFF;
+    padding: 10px 30px;
+}
+
+.menu-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    gap: 50px 20px;
+}
+
+.menu-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-thumb {
+    width: 100%;
+    height: 430px;
+    position: relative;
+    overflow: hidden;
+}
+
+.menu-thumb img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+
+.menu-name {
+    color: #443737;
+    text-align: center;
+    font-family: var(--nunito-sans);
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 126.667%;
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 5px;
+}
+
+.menu-price {
+    color: rgba(68, 55, 55, 0.50);
+    text-align: center;
+    font-family: var(--nunito-sans);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 140%;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-btn {
+    background-color: var(--accent-light);
+    font-family: var(--nunito-sans);
+    width: 152px;
+    height: 38px;
+    border: 0;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    color: #1E2F40;
+    margin-top: 20px;
+}
+
+.menu-btn:hover {
+    background-color: var(--accent-dark);
 }
