--- a/styles/main.css
+++ b/styles/main.css
@@ -244,6 +244,10 @@ a {
 
 /* Menu */
 
+main {
+    margin-bottom: 140px;
+}
+
 .menu-header {
     display: flex;
     align-items: center;
@@ -255,7 +259,7 @@ a {
 .menu-title {
     margin-top: 0;
     margin-bottom: 0;
-    color: #443737;
+    color: var(--dark);
     font-family: var(--nunito-sans);
     font-size: 44px;
     font-style: normal;
@@ -265,6 +269,7 @@ a {
 }
 
 .menu-header select {
+    color: var(--dark);
     border-radius: 22px;
     border: 1px solid #DEDEDE;
     background: #FFF;
@@ -323,23 +328,120 @@ a {
     font-weight: 700;
     line-height: 140%;
     margin: 0;
+    margin-bottom: 20px;
     padding: 0;
 }
 
 .menu-btn {
     background-color: var(--accent-light);
-    font-family: var(--nunito-sans);
     width: 152px;
     height: 38px;
     border: 0;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.menu-btn span {
+    font-family: var(--nunito-sans);
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 700;
     color: #1E2F40;
-    margin-top: 20px;
+
 }
 
 .menu-btn:hover {
     background-color: var(--accent-dark);
+}
+
+/* Footer */
+.footer {
+    background-color: #1E2F40;
+}
+
+.footer > .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 111px 0;
+}
+
+.footer-logo {
+    display: block;
+    width: 63px;
+    height: 56px;
+    background-image: url(../images/logo-light-min.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.footer-title {
+    color: #FFF;
+    font-family: "Nunito Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 190%;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 12px;
+}
+
+.footer-nav {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-nav a {
+    color: rgba(255, 255, 255, 0.90);
+    font-family: var(--open-sans);
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+    margin-bottom: 6px;
+}
+
+.footer-list {
+    padding-left: 0;
+}
+
+.footer-list li {
+    list-style: none;
+    color: #FFF;
+    font-family: var(--open-sans);
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 160%;
+    margin-bottom: 12px;
+}
+
+.footer-list li span {
+    display: block;
+    color: rgba(255, 255, 255, 0.90);
+    font-family: var(--open-sans);
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+}
+
+.footer-item .tel-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-item .tel-container a {
+    color: var(--accent-light);
+    font-family: var(--nunito-sans);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 190%;
+    text-transform: uppercase;
 }
