--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,9 @@
     --accent-dark: #F37335;
     --dark: #443737;
     --light: #FFF;
-    --light-rgb: 255, 255, 255
+    --light-rgb: 255, 255, 255;
+
+    --tr: .2s;
 }
 
 body {
@@ -15,6 +17,11 @@ body {
 
 a {
     text-decoration: none;
+    transition: var(--tr);
+}
+
+button {
+    transition: var(--tr);
 }
 
 .container {
@@ -166,7 +173,7 @@ a {
 }
 
 .hero-description {
-    max-width: 320px;
+    max-width: 321px;
     margin: 0 auto;
     color: rgba(var(--light-rgb), .8);
     font-size: 15px;
@@ -193,7 +200,7 @@ a {
 }
 
 .banner-title {
-    color: #FFF;
+    color:  var(--light);
     font-size: 60px;
     font-family: var(--nunito-sans);
     font-weight: 900;
@@ -208,7 +215,7 @@ a {
     width: 95px;
     height: 28px;
     background-color: #F37335;
-    color: #FFF;
+    color: var(--light);
     font-family: var(--open-sans);
     border-radius: 20px;
     font-size: 14px;
@@ -218,7 +225,7 @@ a {
 
 .banner-description {
     max-width: 328px;
-    color: #FFF;
+    color:  var(--light);
     font-size: 15px;
     line-height: 160%;
     font-weight: 400px;
@@ -272,7 +279,7 @@ main {
     color: var(--dark);
     border-radius: 22px;
     border: 1px solid #DEDEDE;
-    background: #FFF;
+    background: var(--light);
     padding: 10px 30px;
 }
 
@@ -379,8 +386,8 @@ main {
 }
 
 .footer-title {
-    color: #FFF;
-    font-family: "Nunito Sans";
+    color: var(--light);
+    font-family: var(--nunito-sans);
     font-size: 20px;
     font-style: normal;
     font-weight: 800;
@@ -397,7 +404,7 @@ main {
 }
 
 .footer-nav a {
-    color: rgba(255, 255, 255, 0.90);
+    color: rgba(var(--light-rgb), 0.90);
     font-family: var(--open-sans);
     font-size: 15px;
     font-style: normal;
@@ -406,13 +413,18 @@ main {
     margin-bottom: 6px;
 }
 
+.footer-nav a:hover {
+    color: var(--accent-dark);
+}
+
 .footer-list {
     padding-left: 0;
+    margin: 0;
 }
 
 .footer-list li {
     list-style: none;
-    color: #FFF;
+    color:  var(--light);
     font-family: var(--open-sans);
     font-size: 15px;
     font-style: normal;
@@ -423,7 +435,7 @@ main {
 
 .footer-list li span {
     display: block;
-    color: rgba(255, 255, 255, 0.90);
+    color: rgba(var(--light-rgb), 0.90);
     font-family: var(--open-sans);
     font-size: 15px;
     font-style: normal;
@@ -444,4 +456,8 @@ main {
     font-weight: 800;
     line-height: 190%;
     text-transform: uppercase;
+}
+
+.footer-item .tel-container a:hover {
+    color: var(--accent-dark);
 }
