--- a/styles/main.css
+++ b/styles/main.css
@@ -120,6 +120,36 @@ button {
     bottom: 0px;
 }
 
+.button-up {
+    background-color: var(--accent-light);
+    font-family: var(--nunito-sans);
+    align-items: center;
+    text-align: center;
+    padding: 5px 10px;
+    border: 0;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    color: #1E2F40;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+}
+
+.button-up:hover {
+    background-color: var(--accent-dark);
+}
+
+.button-up.hidden {
+    opacity: 0;
+}
+
+.button-up.visible {
+    opacity: 1;
+}
+
+
 /* Hero*/
 
 .hero {
@@ -234,10 +264,13 @@ button {
 }
 
 .banner-btn {
+    display: block;
     background-color: var(--accent-light);
     font-family: var(--nunito-sans);
-    width: 170px;
-    height: 58px;
+    align-items: center;
+    text-align: center;
+    max-width: 170px;
+    padding: 22px 0;
     border: 0;
     border-radius: 5px;
     text-transform: uppercase;
