--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,7 @@ button {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    box-sizing: border-box;
 }
 
 /* Header*/
@@ -41,7 +42,7 @@ button {
 .header-wrapper {
     display: flex;
     align-items: center;
-    gap: 196px;
+    gap: 56px;
     padding-top: 26px;
     padding-bottom: 26px;
 }
@@ -59,6 +60,7 @@ button {
     flex-grow: 1;
     display: flex;
     gap: 47px;
+    margin-left: min(10vw, 140px);
 }
 
 .nav-link {
@@ -596,4 +598,45 @@ button {
 
 .contact-tel:hover {
     color: var(--accent-light);
+}
+
+/* Media */
+
+@media (max-width: 1080px) {
+    .header-wrapper {
+        gap: 40px;
+        
+    }
+
+    .nav {
+        margin-left: 0;
+        gap: min(3vw, 30px);
+    }
+}
+
+@media (max-width: 768px) {
+    .logo {
+        width: 150px;
+        height: 47.81px;
+    }
+
+    .header-wrapper {
+        gap: 45px;   
+    }
+
+    .nav {
+        gap: 22px;
+    }
+
+    .banner {
+        margin-top: 72px;
+    }
+
+    .banner-wrapper {
+        padding: 100px 40px;
+    }
+
+    .menu-header {
+        margin-top: 80px;
+    }
 }
